# autonomous-research-task-execution-agent-console

./: .gitignore  README.md  action.py  agent7.py  architecture.md  architecture_analysis.md  crawled_redis.txt  decision.py  demo_runner.py  how_to_run.md  mcp_server.py  memory.py  perception.py  pyproject.toml  run_benchmark.py  run_servers.sh  schemas.py  usage.json  web_server.py
corpus/: doc_01_aether_9.txt  doc_02_whisper_net.txt  doc_03_aegis_power.txt  doc_04_chronos_personnel.txt  doc_05_zephyr_payload.txt  doc_06_system_log.txt  doc_07_system_log.txt  doc_08_system_log.txt  doc_09_system_log.txt  doc_10_system_log.txt  doc_11_system_log.txt  doc_12_system_log.txt  doc_13_system_log.txt  doc_14_system_log.txt  doc_15_system_log.txt  doc_16_system_log.txt  doc_17_system_log.txt  doc_18_system_log.txt  doc_19_system_log.txt  doc_20_system_log.txt  doc_21_system_log.txt  doc_22_system_log.txt  doc_23_system_log.txt  doc_24_system_log.txt  doc_25_system_log.txt  doc_26_system_log.txt  doc_27_system_log.txt  doc_28_system_log.txt  doc_29_system_log.txt  doc_30_system_log.txt  doc_31_system_log.txt  doc_32_system_log.txt  doc_33_system_log.txt  doc_34_system_log.txt  doc_35_system_log.txt  doc_36_system_log.txt  doc_37_system_log.txt  doc_38_system_log.txt  doc_39_system_log.txt  doc_40_system_log.txt  (+15 more)
llm_gatewayV3/: main.py  providers.py  router.py  schemas.py
prompts/: decision.txt  perception.txt
scratch/: test_gemini.py
static/: index.html
tools/: crawl_tool.py  retrieve_tool.py  search_tool.py
traces/: query_a.txt  query_b.txt  query_c_recall.txt  (+12 more)
(+2 files in other folders)
