[project]
name = "assignment-6-agent"
version = "1.0.0"
description = "Autonomous Research Agent — Assignment 6"
requires-python = ">=3.11"

dependencies = [
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "mcp[cli]>=1.0",
    "ddgs>=4.0",
    "tavily-python>=0.3",
    "crawl4ai>=0.3",
    "fastapi>=0.136.3",
    "uvicorn>=0.47.0",
    "faiss-cpu>=1.8.0",
    "numpy>=2.4.6",
]

[project.scripts]
agent7 = "agent7:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

